   * renamed "Advanced Mode" button on graphics preferences to "Change Resolution"
   * renamed "Advanced Mode" button on sound preferences to "Advanced Options", and
     "Normal Mode" to "Standard Options"
 * WML engine:
   * new key "contains=" in [variable] conditions to check the presence of a 
     substring in a variable value
   * maps now have a user definable border
 * miscellaneous and bug fixes:

Version 1.3.9:
 * campaigns:
  * Descent into Darkness
    * in 'Peaceful Valley', goblins may no longer spawn when you recapture a
      village you had lost
  * Heir to the Throne
    * new graphics for the battle princess
    * in 'Crossroads', the orc ambushers now hide immobile on the map from the
      beginning of the scenario, instead of being spawned randomly when
      stepping on hills
  * Liberty
    * new story images
    * a proper bigmap
    * music changed in several scenarios
  * Northern Rebirth
    * New map for Eastern Flank
    * Fixed big where Father Marcus regenerates in the wrong place in one the
      death events.
    * Rescaled Rakshas' portrait to the proper size.
    * Balancing of opening event in 'Settling Disputes'
    * Various minor polishing and bug-fixes.
    * Extensive balancing, polishing and bug fixing on undead branch.
  * Son of the Black Eye
    * Fixed bug in 'The Coward' where an enemy unit speaks as if he is on your
      side.
    * A bit of dialogue polishing in 'The Coward'
    * Jetto now joins you even if you don't release him during the scenario
  * An Orcish Incursion
    * Campaign heavily revised and added to the distribution
  * general
    * no longer use the external_binary_data dir for including campaign and
      difficulty level icons and images, but reference the images directly
 * graphics:
   * new animations: rogue death, orcish leader line leadership
 * language and i18n:
   * updated translations: Czech, Danish, Dutch, Finnish, French, German,
     Italian, Lithuanian, Polish, Swedish