@@ -36,6 +36,11 @@ Version 1.3.9+svn:
    * new key "contains=" in [variable] conditions to check the presence of a 
      substring in a variable value
    * maps now have a user definable border
+   * Changed the mute hotkey from ctrl-m to ctrl-alt-m.
+   * On victory, all old saves for the scenario except the start one
+     are now deleted (rather than just autosaves as formerly). This
+     is done before replay saving, if that is enabled. The preference
+     name has changed from delete_autosaves to delete_saves.
  * miscellaneous and bug fixes:
 
 Version 1.3.9:
